# Exam_Ing_Software

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: python-app.yml
exam/: __init__.py  exam.py
tests/: Prova_exam_integration_test.py  Prova_exam_unit_test.py  exam_integration_test.py  exam_unit_test.py  second_integration_test.py  second_unit_test.py
