[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exam"
version = "0.0.1"
dependencies = []
requires-python = ">=3.8"
authors = [
  {name = "Matti Maccari", email = "mattia.maccari@edu.unife.it"}
]
maintainers = [
  {name = "Mattia Maccari", email = "mattia.maccari@edu.unife.it"}
]
description = "R.O. Exam Project"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["exam"]

[project.scripts]
exam = "exam:main"

[tool.setuptools]
packages = ["exam"]